feat: add global instance control and commerce
